--- a/index.html
+++ b/index.html
@@ -12,22 +12,19 @@
   <!-- Logo slogan -->
   <header>
     <div class="title fixed-top">
-      <div class="logo-header">
-        <img src="./assets/img/deco-MDC-Comics/logo-MDC-style-marvel.png" >
+      <div class="logo-header justify-content-center">
+        <img src="./assets/img/deco-MDC-Comics/logo-MDC-Comics.png" >
         <h1>"Le meilleur de l'univers DC Comics et Marvel reunis"</h1>
       </div>
       <div class="NavBar w-100">
         <nav class="navbar navbar-expand-lg navbar-dark ">
-          <div class="container">
+          <div class="container ">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <!-- Menu header -->
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
               <ul class="navbar-nav">
-                <li class="BTNheader nav-item">
-                  <a class="nav-link" href="#">Accueil</a>
-                </li>
                 <li class="BTNheader nav-item">
                   <a class="nav-link" href="#">Actualites</a>
                 </li>
@@ -42,6 +39,10 @@
                 </li>
               </ul>
             </div>
+            <li class="BTNheader login">
+              <a class="btn-login" href="#">Login</a>
+              <img src="./assets/img/deco-MDC-Comics/icon identification blanc.png" alt="">
+            </li>
           </div>
         </nav>
       </div>
@@ -59,20 +60,20 @@
       </div>
       <div class="title carousel-inner">
           <div class="carousel-item active">
-            <h4>Actualites</h4>
+            <h2>Actualites</h2>
             <img src="assets/img/deco-MDC-Comics/dc marvel.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <h4>Marvel</h4>
-            <img src="assets/img/deco-MDC-Comics/Super Heros Marvel.jpg" class="d-block w-100" alt="...">
+            <h2>Marvel</h2>
+            <img src="assets/img/deco-MDC-Comics/heros marvel complet.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <h4>DC Comics</h4>
-            <img src="assets/img/deco-MDC-Comics/Super heros Dc.png" class="d-block w-100" alt="...">
+            <h2>DC Comics</h2>
+            <img src="assets/img/deco-MDC-Comics/heros DC comics complet.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <h4>Bons Plans</h4>
-            <img src="assets/img/deco-MDC-Comics/Bons Plans comicbooks.jpg" class="d-block w-100" alt="...">
+            <h2>Bons Plans</h2>
+            <img src="assets/img/deco-MDC-Comics/heros dc-marvel bon plans.jpg" class="d-block w-100" alt="...">
           </div>
       </div>
     </div>
@@ -82,7 +83,7 @@
     <div class="container col-12">
       <div class=" container row justify-content-center">
         <div class="col-12 text-center">
-            <h2>MDC Comics</h2>
+            <h3>MDC Comics</h3>
             <p><strong>"Le Meilleur de l'Univers DC Comics et Marvel reunis"</strong></p>
             <p><strong>MDC Comics</strong> à pour vocation de réunir les différents super-heros des Univers Marvel et DC Comics en un seul endroits: Comics, Biographie, Actualités, Bons Plans...etc...<br>
             Vous ne raterez rien de vos super heros préférez! et peut etre en découvrirez vous d'autre....
@@ -90,13 +91,13 @@
         </div>
         <div class="hist-dc-comics row col-12 col-md-6 justify-content-center">
             <img src="assets/img/deco-MDC-Comics/logo-DC.jpg" alt="...">
-            <h3><strong>DC Comics</strong></h3>
+            <h4>DC Comics</h4>
             <p>
               DC Comics est l'une des principales maisons d’édition américaines de comics, les initiales « DC » sont une abréviation de « Detective Comics »...</p>
         </div>
         <div class="hist-marvel row col-12 col-md-6 justify-content-center">
             <img src="assets/img/deco-MDC-Comics/logo-marvel-fond-rouge.jpg">
-            <h3><strong>MARVEL</strong></h3>
+            <h4>MARVEL</h4>
             <p>Marvel Worldwide Inc., plus communément appelé Marvel Comics ou simplement Marvel, est une subdivision de Marvel Entertainment et l'une des principales maisons d'édition américaines de comics...</p>
         </div>
         <div class="history container row col-12 justify-content-around">
@@ -111,13 +112,13 @@
     <div class="Actus container-fluid">
       <div class="row justify-content-center">
         <div class="col-12 text-center">
-          <h2>ACTUALITES</h2>
+          <h3>ACTUALITES</h3>
           <p><strong>Comics, BD, Festivals, Films...</strong></p>
         </div>
         <div class="colonne-gauche  col-12 col-md-3 text-center">
           <a class="btn" href="">
             <img src="assets/img/Actualites/rock-pop-wizz-angouleme.jpg" alt="">
-            <h3>Rock ! Pop ! Wizz ! Quand la BD monte le son</h3>
+            <h4>Rock ! Pop ! Wizz ! Quand la BD monte le son</h4>
               <p>
                 Exposition inédite à la Cité de la bande dessinée d’Angoulême : « Rock ! Pop ! Wizz ! Quand la BD monte le son » La Cité internationale de la bande dessinée et de l’image d’Angoulême a le plaisir d’accueillir la toute première exposition qui explorera les relations entre musique pop, rock et bande dessinée
                 Du 25 janvier au 31 décembre 2023
@@ -127,7 +128,7 @@
         <div class="colonne-centre col-12 col-md-3 text-center">
           <a class="btn" href="">
             <img src="assets/img/Actualites/printemps-du-livre-grenoble.jpg" alt="">
-            <h3>Momie Grenoble au Printemps du livre</h3>
+            <h4>Momie Grenoble au Printemps du livre</h4>
               <p>
                 Du 31/03/2023 au 02/04/2023
                 La ville de Grenoble organise la 21e édition du Printemps du livre. Et pour ne pas perdre les bonnes habitudes, vous trouverez vos libraires Momie pour accompagner l'évenement.
@@ -137,7 +138,7 @@
         <div class="colonne-droite col-12 col-md-3 text-center">
           <a class="btn" href="">
             <img src="assets/img/Actualites/Festival-Eauze-BD.jpg" alt="">
-            <h3>30e édition du Festival BD d'ÉAUZE</h3>
+            <h4>30e édition du Festival BD d'ÉAUZE</h4>
               <p>
                 Du 06/08/2023 au 06/08/2023 ÉAUZE 
                 Une trentaine d'auteurs internationaux dans le Gers. ENTRÉE GRATUITE. Toutes les infos sur eauzebd.com
@@ -148,7 +149,7 @@
         <div class=" colonne-gauche col-12 col-md-3 text-center">
           <a class="btn" href="">
             <img src="assets/img/Actualites/fete-de-la-bd-gardons-la-bulle.jpg" alt="">
-            <h3>7ème Fête de la BD "Gardons la Bulle"</h3>
+            <h4>7ème Fête de la BD "Gardons la Bulle"</h4>
               <p>
                 Du 06/05/2023 au 07/05/2023 ALES
                 Un événement gratuit pour toute la famille. Une vingtaine d'auteurs en dédicace. Des animations. Pour en savoir plus : www.gardonslabulle.sitew.fr
@@ -165,13 +166,13 @@
     <div class="marvel container-fluid">
       <div class="row justify-content-center">
         <div class="col-12 text-center">
-          <h2>MARVEL</h2>
+          <h3>MARVEL</h3>
           <p><strong>Actualités Marvel: Comics, Films etc...</strong></p>
         </div>
         <div class="colonne-gauche  col-12 col-md-3 text-center">
           <a class="btn" href="">
             <img src="assets/img/Actus-Marvel/Hulk-Tome-36.jpg" alt="">
-            <h3>Hulk (6e Série - Semic - Marvel Comics)</h3>
+            <h4>Hulk (6e Série - Semic - Marvel Comics)</h4>
               <p>
                 Une BD de David, Peter et Angel Medina chez Marvel France (Version Intégrale) - 1998
                 Info édition : Contient: - L'incroyable Hulk (II) 446 "Manhattan sera à moi!" (The Incredible Hulk (II) 446 "I'll Take Manhattan" 10/1996). - L'incroyable Hulk (II) 447 "le syndrome du survivant" (The Incredible Hulk (II) 447 "Survivor's Guilt" 11/1996)
@@ -181,7 +182,7 @@
         <div class="colonne-centre1 col-12 col-md-3 text-center">
           <a class="btn" href="">
             <img src="assets/img/Actus-Marvel/avengers1.jpg" alt="">
-            <h3>Avengers (Marvel France - 1997)</h3>
+            <h4>Avengers (Marvel France - 1997)</h4>
               <p>
                 Avengers 1
                 Dépot légal : 02/1997
@@ -192,8 +193,7 @@
         <div class="colonne-centre2 col-12 col-md-3 text-center">
           <a class="btn" href="">
             <img src="assets/img/Actus-Marvel/Deadpool1.jpg" alt="">
-            <h3>Deadpool (Marvel France 1ère série - 1998)
-              1.</h3>
+            <h4>Deadpool 1 (Marvel France 1ère série - 1998)</h4>
               <p>
                 Les Débuts fracassants du mercenaire le plus allumé de l'univers Marvel !!
                 Une BD de Kelly, Joe et Ed McGuinness chez Marvel France - 1998
@@ -203,7 +203,7 @@
         <div class=" colonne-droite col-12 col-md-3 text-center">
           <a class="btn" href="">
             <img src="assets/img/Actus-Marvel/4-Fantastiques-1.jpg" alt="">
-            <h3>Fantastic Four (La Renaissance des héros)</h3>
+            <h4>Fantastic Four (La Renaissance des héros)</h4>
               <p>
                 Fantastic Four 1
                 Une BD de Loeb, Jeph et Rob Liefeld chez Marvel France - 1998
@@ -221,13 +221,13 @@
     <div class="dc-comics container-fluid">
       <div class="row justify-content-center">
         <div class="col-12 text-center">
-          <h2>DC COMICS</h2>
+          <h3>DC COMICS</h3>
           <p><strong>Actualités DC: Comics, Films etc...</strong></p>
         </div>
         <div class="colonne-gauche  col-12 col-md-3 text-center">
           <a class="btn" href="">
             <img src="assets/img/Actus-DC-Comics/batman-cours-des-hiboux-part1.jpg" alt="">
-            <h3>Batman - La Cour des hiboux - 1ère partie</h3>
+            <h4>Batman - La Cour des hiboux - 1ère partie</h4>
               <p>
                 Parution le 10/11/2015
                 La Cour des Hiboux est décrite comme étant une organisation secrète tenue par des gens fortunés et puissants de Gotham city. Son rôle est de contrôler la ville. Elle agit pour cela principalement dans l'ombre et peut, lorsque la situation l'exige, envoyer «L'Ergot», l'assassin de la Cour, afin de régler le litige.
@@ -237,7 +237,7 @@
         <div class="colonne-centre col-12 col-md-3 text-center">
           <a class="btn" href="">
             <img src="assets/img/Actus-DC-Comics/batman-silence-part1.jpg" alt="">
-            <h3>Batman - Silence - 1ère partie</h3>
+            <h4>Batman - Silence - 1ère partie</h4>
               <p>
                 Parution le 18/08/2015
                 Batman se retrouve assailli par tous ses ennemis, lorsqu'un mystérieux personnage, qui dissimule son visage sous des bandelettes, apparaît. Son nom? Silence. Son but? Harceler le justicier jusqu'à lui faire perdre raison. Catwoman saura-t-elle lui apporter l'aide et le réconfort dont il a cruellement besoin?
@@ -247,7 +247,7 @@
         <div class="colonne-droite col-12 col-md-3 text-center">
           <a class="btn" href="">
             <img src="assets/img/Actus-DC-Comics/justice-league-aux-origines.jpg" alt="">
-            <h3>Justice League Aux Origines</h3>
+            <h4>Justice League Aux Origines</h4>
               <p>
                 Tome 4
                 Collection: URBAN PREMIUM
@@ -258,7 +258,7 @@
         <div class=" colonne-gauche col-12 col-md-3 text-center">
           <a class="btn" href="">
             <img src="assets/img/Actus-DC-Comics/superman-le-derniers-fils.jpg" alt="">
-            <h3>Superman : le dernier fils</h3>
+            <h4>Superman : le dernier fils</h4>
               <p>
                 Un vaisseau spatial s’écrase en plein Metropolis : à l’intérieur, un jeune enfant. Superman prend sous son aile le rescapé et découvre qu’il vient, comme lui, de Krypton. Mais quel est le secret de ce « Dernier Fils » ?
               </p>
@@ -274,13 +274,13 @@
     <div class="bons-plans container-fluid">
       <div class="row justify-content-center">
         <div class="col-12 text-center">
-          <h2>BONS PLANS</h2>
+          <h3>BONS PLANS</h3>
           <p><strong>Bons plans: Comics, BD, Films...</strong></p>
         </div>
         <div class="colonne-gauche  col-12 col-md-3 text-center">
           <a class="btn" href="">
-            <img src="assets/img/Bons-Plans/green-lantern-saga-2-promo.webp" alt="">
-            <h3>Green Lantern Saga Numero 02</h3>
+            <img src="assets/img/Bons-Plans/green-lantern-saga-2-promo.jpg" alt="">
+            <h4>Green Lantern Saga Numero 02</h4>
               <p>
                 Sinestro est un Green Lantern ! et il doit aider Hal Jordan contre les Sinestro Corps !
                 Guy Gardner et John Stewart mènent une équipe de Green Lanterns contre une force qui consume des planètes entières !
@@ -290,32 +290,30 @@
         </div>
         <div class="colonne-centre col-12 col-md-3 text-center">
           <a class="btn" href="">
-            <img src="assets/img/Bons-Plans/sur-toutes-les-figurines-marvel-large.jpeg" alt="">
-            <h3>Carrefour Promotion Marvel</h3>
+            <img src="assets/img/Bons-Plans/bon plans carrefour comics or.jpg" alt="">
+            <h4>Sélection de comics Marvel Gold Collection 3,99€- Carrefour</h4>
              <p>
-              -25% D'économies
-              L'offre Sur Toutes Les Figurines Marvel en cours chez Carrefour du catalogue du 28-03 au 10-04
+              La nouvelle collection Marvel est disponible dans les magasins Carrefour, 10 tomes à 3.99 euros pièce.<br/>
+              1- Dark Avengers, 2- Uncanny Avengers, 3- Uncanny Inhumains, 4- Les Gardiens de la Galaxie, 5- Secret Avengers, 6- Secret Warriors, 7- Squadron Supreme, 8- Thunderbolts, 9 - X-Force, 10- X-TREME X-men
              </p>
           </a>
         </div>
         <div class="colonne-droite col-12 col-md-3 text-center">
           <a class="btn" href="">
             <img src="assets/img/Bons-Plans/bon-plan-collection-promo-le-meilleur-de-dc-comics.jpg" alt="">
-            <h3>ÉAUZE BD</h3>
+            <h4>Le meilleur de DC Comics à 4,90€</h4>
               <p>
-                Festival ÉAUZE du 06/08/2023 au 06/08/2023 
-                Site web : www.eauzebd.com 
-                30e édition du Festival BD d'ÉAUZE. Une trentaine d'auteurs internationaux dans le Gers. ENTRÉE GRATUITE. Toutes les infos sur eauzebd.com
+                Disponible en librairie, mais également en GSS et GSA, découvrez cette sélection de 10 récits complets. Vous avez toujours voulu débuter Batman, Wonder Woman, ou tout simplement les comics ? C’est le moment!
               </p>
           </a>
         </div>
         <div class=" colonne-gauche col-12 col-md-3 text-center">
           <a class="btn" href="">
-            <img src="assets/img/Bons-Plans/coffret-anniversaire-spiderman.webp" alt="">
-            <h3>7ème Fête de la BD "Gardons la Bulle"</h3>
+            <img src="assets/img/Bons-Plans/coffret-anniversaire-spiderman.jpg" alt="">
+            <h4>Coffret Spider-Man - La collection anniversaire"</h4>
               <p>
-                Festival ALES du 06/05/2023 au 07/05/2023 
-                Un événement gratuit pour toute la famille. Une vingtaine d'auteurs en dédicace. Des animations. Pour en savoir plus : www.gardonslabulle.sitew.fr
+                Pack complet La collection anniversaire Spider-Man
+                Le pack complet des 10 titres de la collection anniversaire Spider-Man, 69€ 
               </p>
           </a>
         </div>
@@ -330,7 +328,7 @@
       <div class="cgv container-fluid">
         <div class="MDC_comics row justify-content-center">
           <div class="logo col-md-3">
-            <img src="assets/img/deco-MDC-Comics/logo-MDC-style-marvel.png" alt="">
+            <img src="assets/img/deco-MDC-Comics/logo-MDC-Comics.png" alt="">
           </div>
           <div class="prestations row col-md-5 text-center">
             <p>MDC Comics<br>"Le Meilleur de l'Univers DC Comics et Marvel reunis"<br>Actualités - Univers DC - Univers Marvel - Bons Plans Shopping</p>
