--- a/Admin.html
+++ b/Admin.html
@@ -11,81 +11,103 @@
 <body>
     <header>
         <div class="title fixed-top">
-            <div class="logo-header">
-              <img src="./assets/img/deco-MDC-Comics/logo-MDC-Comics.png" >
-              <h1>"Le meilleur de l'univers DC Comics et Marvel reunis"</h1>
-            </div>
-            <h2>Administrateur</h2>
-            <div class="NavBar w-100">
-              <nav class="navbar navbar-expand-lg navbar-dark ">
-                <div class="container">
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                  </button>
+          <div class="logo-header justify-content-center">
+            <img src="./assets/img/deco-MDC-Comics/logo-MDC-Comics.png" >
+            <h1>"Le meilleur de l'univers DC Comics et Marvel reunis"</h1>
+          </div>
+          
+          <div class="NavBar w-100">
+            <nav class="navbar navbar-expand-lg navbar-dark ">
+              <div class="container ">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <!-- Menu header -->
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                  <ul class="navbar-nav">
+                    <li class="BTNheader nav-item">
+                      <a class="nav-link" href="#">Actualites</a>
+                    </li>
+                    <li class="DCheader nav-item">
+                      <a class="nav-link" href="#">DC Comics</a>
+                    </li>
+                    <li class="MARVELheader nav-item">
+                      <a class="nav-link" href="#">Marvel</a>
+                    </li>
+                    <li class="BTNheader nav-item">
+                      <a class="nav-link" href="#">Bons Plans</a>
+                    </li>
+                  </ul>
                 </div>
-            </div>  
+                <li class="BTNheader login">
+                    <h2>Administrateur</h2>
+                  <img src="./assets/img/deco-MDC-Comics/icon identification blanc.png" alt="">
+                </li>
+              </div>
+            </nav>
+          </div>
         </div>
-    </header>
+      </header>
     <main>
             <!-- MDC Comics -->
     <div class="container col-12">
         <div class=" container row justify-content-center">
-          <div class="col-12 text-center">
-              <h4>MDC Comics</h4>
-              <p><strong>"Le Meilleur de l'Univers DC Comics et Marvel reunis"</strong></p>
-              <p><strong>MDC Comics</strong> à pour vocation de réunir les différents super-heros des Univers Marvel et DC Comics en un seul endroits: Comics, Biographie, Actualités, Bons Plans...etc...<br>
-              Vous ne raterez rien de vos super heros préférez! et peut etre en découvrirez vous d'autre....
-              </p>
-          </div>
-          <div class="hist-dc-comics row col-12 col-md-6 justify-content-center">
-              <img src="assets/img/deco-MDC-Comics/logo-DC.jpg" alt="...">
-              <h3>DC Comics</h3>
-              <p>
+            <div class="col-12 text-center">
+                <h3>MDC Comics</h3>
+                <p><strong>"Le Meilleur de l'Univers DC Comics et Marvel reunis"</strong></p>
+                <p><strong>MDC Comics</strong> à pour vocation de réunir les différents super-heros des Univers Marvel et DC Comics en un seul endroits: Comics, Biographie, Actualités, Bons Plans...etc...<br>
+                Vous ne raterez rien de vos super heros préférez! et peut etre en découvrirez vous d'autre....
+                </p>
+            </div>
+            <div class="hist-dc-comics row col-12 col-md-6 justify-content-center">
+                <img src="assets/img/deco-MDC-Comics/logo-DC.jpg" alt="...">
+                <h4>DC Comics</h4>
+                <p>
                 DC Comics est l'une des principales maisons d’édition américaines de comics, les initiales « DC » sont une abréviation de « Detective Comics »...</p>
-          </div>
-          <div class="hist-marvel row col-12 col-md-6 justify-content-center">
-              <img src="assets/img/deco-MDC-Comics/logo-marvel-fond-rouge.jpg">
-              <h3>MARVEL</h3>
-              <p>Marvel Worldwide Inc., plus communément appelé Marvel Comics ou simplement Marvel, est une subdivision de Marvel Entertainment et l'une des principales maisons d'édition américaines de comics...</p>
-          </div>
-          <div class="history container row col-12 justify-content-around">
+            </div>
+            <div class="hist-marvel row col-12 col-md-6 justify-content-center">
+                <img src="assets/img/deco-MDC-Comics/logo-marvel-fond-rouge.jpg">
+                <h4>MARVEL</h4>
+                <p>Marvel Worldwide Inc., plus communément appelé Marvel Comics ou simplement Marvel, est une subdivision de Marvel Entertainment et l'une des principales maisons d'édition américaines de comics...</p>
+            </div>
+            <div class="history container row col-12 justify-content-around">
             <a class="DC btn btn-primary" href="https://fr.wikipedia.org/wiki/DC_Comics" role="button" target="_blank">HISTOIRE  DE  DC</a>
             <a class="Marvel btn btn-primary" href="https://fr.wikipedia.org/wiki/Marvel_Comics#:~:text=Martin%20Goodman%20fonde%20la%20soci%C3%A9t%C3%A9,aussi%20pl%C3%A9biscit%C3%A9%20par%20les%20lecteurs." role="button" target="_blank">HISTOIRE  DE  MARVEL</a>
-          </div>
+            </div>
         </div>
-      </div>
+        </div>
 
     </main>
     <!-- FOOTER MDC -->
     <footer>
         <div class="cgv container-fluid">
             <div class="MDC_comics row justify-content-center">
-                <div class="logo col-md-3">
-                    <img src="assets/img/deco-MDC-Comics/logo-MDC-Comics.png" alt="">
-                </div>
-                <div class="prestations row col-md-5 text-center">
-                    <p>MDC Comics<br>"Le Meilleur de l'Univers DC Comics et Marvel reunis"<br>Actualités - Univers DC - Univers Marvel - Bons Plans Shopping</p>
-                </div>
-                <div class="contact row col-md-4" >
-                    <p>CONTACTEZ-NOUS<br>Bordeaux<br>Gironde<br>guillaume.portejoie@lapiscine.pro<p>            
-                    <li>
-                        <a class="facebook" href="#">
-                            <img src="assets/img/deco-MDC-Comics/Icon-Facebook.png" alt="">
-                        </a>
-                        <a class="instagram" href="#">
-                            <img src="assets/img/deco-MDC-Comics/Icon-instagram-blanc.webp" alt="">
-                        </a>
-                    </li>
-                </div>
+              <div class="logo col-md-3">
+                <img src="assets/img/deco-MDC-Comics/logo-MDC-Comics.png" alt="">
+              </div>
+              <div class="prestations row col-md-5 text-center">
+                <p>MDC Comics<br>"Le Meilleur de l'Univers DC Comics et Marvel reunis"<br>Actualités - Univers DC - Univers Marvel - Bons Plans Shopping</p>
+              </div>
+              <div class="contact row col-md-4" >
+                  <p>CONTACTEZ-NOUS<br>Bordeaux<br>Gironde<br>guillaume.portejoie@lapiscine.pro<p>            
+                  <li>
+                    <a class="facebook" href="#">
+                      <img src="assets/img/deco-MDC-Comics/Icon-Facebook.png" alt="">
+                    </a>
+                    <a class="instagram" href="#">
+                      <img src="assets/img/deco-MDC-Comics/Icon-instagram-blanc.webp" alt="">
+                    </a>
+                  </li>
+              </div>
             </div>
             <div class="CGV text-center">
-                <p>Copyright 2023</p>
-                <li>
+              <p>Copyright 2023</p>
+              <li>
                 <a href="guillaume.portejoie@yahoo.com">GMP Factory - Intégration PORTEJOIE Guillaume</a>
                 <a href="#">- Mentions legales</a>
-                </li>
+              </li>
             </div>
-        </div>
+          </div>
     </footer>
     <script src="assets/lib/bootstrap/js/bootstrap.min.js"></script>
 </body>
